Replace Swing with JavaFX